examples/test/testpolicy17605.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17605
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key33: value6
      key22: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value42
          key32: value0
      podSelector:
        matchLabels:
          key44: value12
          key35: value11
